Added journal viewing page and other features

--- a/authentication/templates/authentication/register.html
+++ b/authentication/templates/authentication/register.html
@@ -16,7 +16,7 @@
 
     /* Set background */
     body {
-        background: white;
+        background: beige;
         background-size: cover;
         height: 100vh;
         display: flex;
