--- a/personal_journal_app/templates/entry.html
+++ b/personal_journal_app/templates/entry.html
@@ -7,7 +7,8 @@
 
     <style>
         body {
-            background-color: white;
+            background: url('https://i.pinimg.com/736x/72/c3/91/72c391bdc84e2e6b8bd9ace4ca4f0552.jpg') no-repeat center center fixed;
+            background-size: cover;
             margin: 0;
             padding: 0;
         }
@@ -127,7 +128,7 @@
 
         <div class="mb-3">
             <label for="content" class="form-label">Content</label>
-            
+
             <!-- Uneditable part -->
             <div class="form-control" style="background-color: #f8f9fa; font-style: italic;" disabled>
                 DEAR DIARY,
